--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.0.0",
     "@types/jest": "^29.5.11",
     "@types/node": "^22.10.7",
