--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@remotion/cli": "^4.0.407",
     "@remotion/renderer": "^4.0.407",
     "@stripe/stripe-js": "^4.10.0",
+    "@vercel/analytics": "^1.6.1",
     "next": "15.5.9",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
